--- a/public/components/GeckoDetail/GeckoDetailTemplate.htm
+++ b/public/components/GeckoDetail/GeckoDetailTemplate.htm
@@ -2,45 +2,58 @@
 <!-- TODO[x]: Change gecko detail to look more like add new gecko form with labels above entry -->
 <div class='gecko-detail'>
     <form name="edit" id="editform">
-        <div class='detail-top'>
+        <div class='detail-top' ng-hide="showEditMode">
 
             <span class='detail-name'>
-                <span ng-hide="showEditMode">{{geckoDetail.name}}</span>
-            <label ng-show="showEditMode">Name</label>
-            <input ng-show="showEditMode" type="text" class="inline" ng-model="editform.name" name="name">
-            <span ng-show="edit.name.$dirty"><i class='fa fa-undo link green' ng-click="undo('name')" title="Undo change"></i></span>
+            <span>{{geckoDetail.name}}</span>
             </span>
 
             <span class='detail-gender'>
-                <span ng-hide="showEditMode">
-                    <i class='fa fa-mars male' ng-if="geckoDetail.sex == 'male'" title="male"></i>
-                    <i class='fa fa-venus female' ng-if="geckoDetail.sex == 'female'" title="female"></i>
-                    <i class='fa fa-question unknown' ng-if="geckoDetail.sex == 'unknown'" title="gender unknown"></i>
-                </span>
-            <label ng-show="showEditMode">Sex</label>
-            <select ng-model="editform.sex" ng-show="showEditMode" class="inline" name="sex">
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-                <option value="unknown">Unknown</option>
-            </select>
-            <span ng-show="edit.sex.$dirty"><i class='fa fa-undo link green' ng-click="undo('sex')" title="Undo change"></i></span>
+            <span>
+                <i class='fa fa-mars male' ng-if="geckoDetail.sex == 'male'" title="male"></i>
+                <i class='fa fa-venus female' ng-if="geckoDetail.sex == 'female'" title="female"></i>
+                <i class='fa fa-question unknown' ng-if="geckoDetail.sex == 'unknown'" title="gender unknown"></i>
+            </span>
+            </span>
 
             <span class='detail-id'>
-                    <span ng-class="{placeholder: !geckoDetail.userId}" ng-hide="showEditMode" name="userId">
-                         {{geckoDetail.userId || "(no ID entered)"}}</span>
-            <label ng-show="showEditMode">User ID</label>
-            <input ng-show="showEditMode" type="text" class="inline" ng-model="editform.userId" name="userId">
-            <span ng-show="edit.userId.$dirty"><i class='fa fa-undo link green' ng-click="undo('userId')" title="Undo change"></i></span>
+             <span ng-class="{placeholder: !geckoDetail.userId}" name="userId">
+                  {{geckoDetail.userId || "(no ID entered)"}}
             </span>
             </span>
 
             <span class="button--fab">
-                <i class="material-icons link" ng-click="triggerEditMode()" title="Enter edit mode">mode_edit</i>
-                <i class="material-icons link" ng-click="deleteGecko(geckoDetail)" title="Delete this gecko">delete</i>
-                </span>
+            <i class="material-icons link" ng-click="triggerEditMode()" title="Enter edit mode">mode_edit</i>
+            <i class="material-icons link" ng-click="deleteGecko(geckoDetail)" title="Delete this gecko">delete</i>
+        </span>
         </div>
         <!-- End of detail top -->
-        <div class="detail-items">
+
+
+        <div class="detail-items" ng-class="{'detail--editmode': showEditMode}">
+            <div class="detail-item" ng-show="showEditMode">
+                <label>Name</label>
+                <input type="text" class="inline" ng-model="editform.name" name="name">
+                <span ng-show="edit.name.$dirty"><i class='fa fa-undo link green' ng-click="undo('name')" title="Undo change"></i></span>
+            </div>
+
+            <div class="detail-item" ng-show="showEditMode">
+                <label>Sex</label>
+                <select ng-model="editform.sex" class="inline" name="sex">
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                    <option value="unknown">Unknown</option>
+                </select>
+                <span ng-show="edit.sex.$dirty"><i class='fa fa-undo link green' ng-click="undo('sex')" title="Undo change"></i></span>
+            </div>
+
+            <div class="detail-item" ng-show="showEditMode">
+                <label>User ID</label>
+                <input type="text" class="inline" ng-model="editform.userId" name="userId">
+                <span ng-show="edit.userId.$dirty"><i class='fa fa-undo link green' ng-click="undo('userId')" title="Undo change"></i></span>
+                </span>
+            </div>
+
             <div class="detail-item">
                 <label>Morph</label>
                 <span ng-hide="showEditMode" ng-class="{placeholder: !geckoDetail.morph}">{{geckoDetail.morph || "(no morph entered)" | capitalize }}</span>
