--- a/public/components/GeckoDetail/GeckoDetailTemplate.htm
+++ b/public/components/GeckoDetail/GeckoDetailTemplate.htm
@@ -136,7 +136,7 @@
 
             </div>
         </div>
-        <div class="right" ng-show="showEditMode">
+        <div class="detail-edit-buttons" ng-show="showEditMode">
             <button class="button--raised" ng-click="submitEditForm()"><i class='fa fa-download'></i></span>
                 SAVE CHANGES</button>
             <button class="button--raised" ng-click="resetForm()" class="button--secondary"><i class='fa fa-undo'></i>REVERT</button>
