Nearly completed gecko detail component refactor. Parent controls and purchase aren't working yet.

--- a/public/assets/css/base/_b-base.less
+++ b/public/assets/css/base/_b-base.less
@@ -17,7 +17,8 @@ a:hover:not(.link--nohover),
 }
 
 body {
-    background: black;
+    //background: black;
+	background: white;
     font-family: "Roboto", sans-serif;
     margin: 0;
 }
