--- a/public/assets/css/layout/_l-layout.less
+++ b/public/assets/css/layout/_l-layout.less
@@ -20,10 +20,13 @@ Used for notifications in dashboard view and details and photo gallery in gecko 
 
 #SIDE-BAR {
     background: @textColorDark;
-    min-width: 200px;
+    //min-width: 200px;
     width: 33%;
+	width: 400px;
+	max-width: 400px;
     padding: 10px;
     color: #a0a0a0;
+	min-height: 100vh;
 }
 
 
@@ -42,7 +45,7 @@ Used for notifications in dashboard view and details and photo gallery in gecko 
 /* Container right of side-bar on gecko detail view that holds the events table and weight chart */
 
 #CHARTS {
-    width: 67%;
+    //width: 67%;
     display: flex;
     flex-direction: column;
 }
