--- a/public/assets/css/modules/_form-fields.less
+++ b/public/assets/css/modules/_form-fields.less
@@ -36,6 +36,11 @@
 		padding: 1px 4px;
 		padding: 1px;
 	}
+	input {
+		&.modified {
+			border-color: red;
+		}
+	}
 
 	input[type='date'] {
 		font-family: Roboto;
@@ -50,7 +55,7 @@
 	.form-field-message {
 		color: #fd2222;
 		font-size: 11px;
-		height: 28px;
+		//height: 28px;
 	}
 	
 	margin-bottom: 10px;
@@ -62,6 +67,28 @@
 		width: 100%;
 		height: 100%;
 		z-index: 2000;
+	}
+}
+
+.dark-form-fields .form-field {
+	.form-field-label {
+	}
+	input,.input {
+		color: white;
+		background: transparent;
+		border-color: #444;
+	}
+	input, .input {
+		&.modified {
+			border-color: red;
+		}
+		&:focus {
+			border-color: green;
+		}
+	}
+	
+	.placeholder {
+		color: #a0a0a0;
 	}
 }
 
@@ -143,6 +170,7 @@
 		padding: 1px 4px;
 		border: 0;
 		background: white;
+		color: black;
 		&:hover {
 			background: @primary-color;
 			color: white;
