Completed a light weight chart redesign.

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -4086,3 +4086,8 @@ egg-table gecko {
     opacity: 0;
   }
 }
+.WeightChart .title {
+  font-family: Roboto;
+  padding: 16px;
+  font-size: 20px;
+}
