--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -24,3 +24,5 @@
 @import "modules/_add-notification-form.less";
 @import "modules/_notifications-settings.less";
 @import "modules/_loading-screen.less";
+@import "modules/_weight-chart.less";
+
