--- a/public/components/Charts/WeightChartTemplate.htm
+++ b/public/components/Charts/WeightChartTemplate.htm
@@ -1,2 +1,4 @@
-<div id='weight-chart'>
+<div class='WeightChart'>
+	<div class='title'>Weight History</div>
+	<div id='weight-chart'></div>
 </div>
