--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -25,4 +25,4 @@
 @import "modules/_notifications-settings.less";
 @import "modules/_loading-screen.less";
 @import "modules/_weight-chart.less";
-
+@import "modules/_gecko-notes.less";
