--- a/public/components/GeckoDetail/GeckoDetailTemplate.htm
+++ b/public/components/GeckoDetail/GeckoDetailTemplate.htm
@@ -62,7 +62,7 @@
 				<form-field-callback label="Hatched" value="{{details.hatched | date:'longDate'}}" callback="modifyHatched"></form-field-callback>
 			</div>
 			<div class="half-width">
-				<form-field-callback label="Purchased" value="{{details.purchased | date:'longDate'}}" callback="testIt"></form-field-callback>
+				<form-field-callback label="Purchased" value="{{details.purchased | date:'longDate'}}" callback="modifyPurchased"></form-field-callback>
 			</div>
 		</div>
 		
