--- a/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
+++ b/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
@@ -5,7 +5,7 @@
         <span class='statusbar-name'>
         {{geckoDetail.name}}
         </span>
-        <a href="/" class="statusbar-button">BACK TO LIST</a>
+        <a href="/" class="statusbar-button"><i class='material-icons' style='padding: 0; font-size: 19px; position: relative; top: 4px;'>arrow_back</i> BACK TO DASHBOARD</a>
 		<span ng-click="goTo('events')">Events</span>
 		<span ng-click="goTo('weightHistory')">Weight History</span>
 		<span ng-click="goTo('eggs')">Eggs</span>
