Cleaned up various things

--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -26,3 +26,4 @@
 @import "modules/_loading-screen.less";
 @import "modules/_weight-chart.less";
 @import "modules/_gecko-notes.less";
+@import "modules/_gecko-table.less";
