--- a/public/assets/css/layout/_l-layout.less
+++ b/public/assets/css/layout/_l-layout.less
@@ -24,9 +24,12 @@ Used for notifications in dashboard view and details and photo gallery in gecko 
     width: 33%;
 	width: 400px;
 	max-width: 400px;
+	flex-shrink: 0;
+	flex-grow: 1;
     padding: 10px;
     color: #a0a0a0;
 	min-height: 100vh;
+	//height: calc(~"100%" - 90px);
 }
 
 
