--- a/public/components/GeckoDetail/GeckoDetailTemplate.htm
+++ b/public/components/GeckoDetail/GeckoDetailTemplate.htm
@@ -5,22 +5,24 @@
         <div class='detail-top' ng-hide="showEditMode">
 
             <span class='detail-name'>
-            <span>{{geckoDetail.name}}</span>
+				<span>{{gecko.name}}</span>
             </span>
 
             <span class='detail-gender'>
-            <span>
-                <i class='fa fa-mars male' ng-if="geckoDetail.sex == 'male'" title="male"></i>
-                <i class='fa fa-venus female' ng-if="geckoDetail.sex == 'female'" title="female"></i>
-                <i class='fa fa-question unknown' ng-if="geckoDetail.sex == 'unknown'" title="gender unknown"></i>
-            </span>
+				<span>
+					<i class='fa fa-mars male' ng-if="gecko.sex == 'male'" title="male"></i>
+					<i class='fa fa-venus female' ng-if="gecko.sex == 'female'" title="female"></i>
+					<i class='fa fa-question unknown' ng-if="gecko.sex == 'unknown'" title="gender unknown"></i>
+				</span>
             </span>
 
+<!--
             <span class='detail-id'>
             <span ng-class="{placeholder: !geckoDetail.userId}" name="userId">
                   {{geckoDetail.userId || "(no ID entered)"}}
             </span>
             </span>
+-->
 
             <span class="button--fab">
             <i class="material-icons link" ng-click="triggerEditMode()" title="Enter edit mode">mode_edit</i>
