--- a/public/assets/css/base/_b-datatables.less
+++ b/public/assets/css/base/_b-datatables.less
@@ -72,6 +72,10 @@ table.data-table {
 		}
 	}
 	
+	.align-right {
+		text-align: right;
+	}
+	
 	td.action-icons {
 		text-align: right;
 		.action-icon {
