--- a/public/views/DashboardView/DashboardViewTemplate.htm
+++ b/public/views/DashboardView/DashboardViewTemplate.htm
@@ -10,7 +10,7 @@
         </div>
         <div class="dashboard-main-container">
             <gecko-table></gecko-table>
+		    <egg-table></egg-table>
         </div>
     </div>
-    <!--<egg-table></egg-table> -->
 </div>
