Cleaning up gecko table, in progress

--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -27,3 +27,4 @@
 @import "modules/_weight-chart.less";
 @import "modules/_gecko-notes.less";
 @import "modules/_gecko-table.less";
+@import "modules/_gecko-timeline.less";
