--- a/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
+++ b/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
@@ -19,11 +19,14 @@
         </div>
         <div id="CHARTS">
 			<gecko-notes></gecko-notes>
+			<a id="timeline"></a>
+			<gecko-timeline gecko-id="geckoId"></gecko-timeline>
 			<a id="events"></a>
             <events-table gecko-id="geckoId"></events-table>
 			<a id="weightHistory"></a>
             <weight-chart gecko-id="geckoId"></weight-chart>
             <notifications-settings></notifications-settings>
+            <gecko-table mother="geckoId" title="Offspring"></gecko-table>
 			<a id="eggs"></a>
             <egg-table gecko="geckoDetail"></egg-table>
         </div>
