--- a/public/assets/css/layout/_l-layout.less
+++ b/public/assets/css/layout/_l-layout.less
@@ -3,6 +3,23 @@
     display: flex;
 }
 
+
+.flex-center {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.full-width { width: 100%; }
+.half-width { width: 50%; }
+.third-width { width: 33.33333% }
+.two-third-width { width: 66.66666% }
+.quarter-width { width: 25%; }
+.two-quarter-width { width: 75%; }
+
+.grow { flex-grow: 1 }
+.shrink { flex-shrink: 1 }
+
 // HEADER //
 #STATUS-BAR {
     min-height: 5vh;
