--- a/public/assets/css/modules/_gecko-picker.less
+++ b/public/assets/css/modules/_gecko-picker.less
@@ -1,4 +1,114 @@
 .gecko-picker {
+	position: relative; 
+	font-family: Roboto;
+	
+	.label {
+		font-size: 11px;
+		height: 16px;
+		color: #b0b0b0;
+	}
+	
+	.value {
+		//border-bottom: solid 1px #d0d0d0;
+		padding: 0;
+		position: relative;
+		font-size: 16px;
+		
+		span.pristine {
+			color: #808080;
+		}
+		
+		&.picker-highlight {
+			border-bottom: solid 2px @primary-color;
+		}
+		
+		&:hover {
+			
+		}
+		
+		cursor: pointer;
+	}
+	
+	.page-cover {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: transparent;
+//		background: rgba(0,0,0,0.1);
+//		z-index: 1000;
+	}
+	
+	.gecko-picker-dropdown {
+		z-index: 1100;
+		.depth-1;
+		width: 100%;
+		font-family: Roboto;
+		color: black;
+		background: white;
+		position: absolute;
+		top: 60px;
+		left: 0px;
+		border-radius: 3px 3px 0 0;
+		max-width: 400px;
+		min-width: 400px;
+	}
+	
+	.gecko-picker-dropdown .search {
+		border: 0;
+		width: 100%;
+		display: flex;
+		font-size: 16px;
+		font-family: Roboto;
+		background: transparent;
+		background: #f0f0f0;
+		i {
+			font-size: 18px;
+		}
+		input {
+			padding: 6px 8px;
+		}
+	}
+	
+	.gecko-picker-dropdown .item {
+		padding: 6px 8px;
+		border-top: solid 1px #f0f0f0;
+		font-size: 16px; 
+		position: relative;
+		cursor: pointer;
+		
+		&:hover {
+			background: @primary-color;
+			color: white;
+		}
+		&.selected {
+			background: lighten(@primary-color, 5%);
+			color: white;
+		}
+		z-index: 1200;
+	}
+	
+	.pagination {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-top: solid 1px #f0f0f0;
+		
+		.counts {
+			flex-grow: 1;
+			text-align: center;
+			color: #808080;
+			font-size: 12px;
+		}
+		.page-nav {
+			cursor: pointer;
+		}
+	}
+}
+
+/*
+.gecko-picker {
 	// TODO Integrate this with base styles
 	.modal-black-out{
 		width: 100%;
@@ -101,3 +211,5 @@
 		}
 	}
 }
+*/
+
