Add gecko modal refactored, most fields working, need some server side (different issue)

--- a/public/assets/css/layout/_l-layout.less
+++ b/public/assets/css/layout/_l-layout.less
@@ -3,6 +3,16 @@
     display: flex;
 }
 
+.flex-wrap {
+	flex-wrap: wrap;
+}
+
+.half-width { width: 50% }
+.full-width { width: 100% }
+.quarter-width { width: 25% }
+.third-width { width: 33.33333% }
+.two-third-width { width: 66.66666% }
+
 // HEADER //
 #STATUS-BAR {
     min-height: 5vh;
