--- a/public/components/GeckoTable/GeckoTableTemplate.htm
+++ b/public/components/GeckoTable/GeckoTableTemplate.htm
@@ -63,7 +63,7 @@
         </tr>
 
     </table>
-	<div class='page-padding align-right' ng-click='showAddGeckoModal()'>
-		<button class='button--flat'>Add Gecko</button>
+	<div class='page-padding align-right'>
+		<button class='button--flat' ng-click='showAddGeckoModal()'>Add Gecko</button>
 	</div>
 </div>
