Fixes #40. Completed add gecko modal rework.

--- a/public/components/AddGeckoForm/AddGeckoFormTemplate.htm
+++ b/public/components/AddGeckoForm/AddGeckoFormTemplate.htm
@@ -34,10 +34,10 @@
 			</div>
 
 			<div class='half-width'>
-				<form-field-date label="Mother" value="form.hatchDate" />
+				<gecko-picker label="Mother" value="form.mother" gender="male" />
 			</div>
 			<div class='half-width'>
-				<form-field-date label="Father" value="form.purchaseDate" />
+				<gecko-picker label="Father" value="form.father" gender="female" />
 			</div>
 
 			<div class='two-third-width'>
