--- a/public/assets/css/layout/_l-layout.less
+++ b/public/assets/css/layout/_l-layout.less
@@ -30,6 +30,23 @@
 // HEADER //
 #STATUS-BAR {
     min-height: 5vh;
+	
+	.statusbar-button {
+		width: 400px;
+		display: inline-block;
+	}
+	
+	.sub-navigation {
+		span {
+			margin-right: 20px;
+			cursor: pointer;
+			&:hover {
+				color: desaturate(lighten(@primary-color, 10%), 40%);
+			}
+		}
+	}
+	
+	box-shadow: 0 2px 6px rgba(0,0,0,0.25); //, 0 10px 10px
 }
 
 // LAYOUT FOR DASHBOARD VIEW //
