Fixes #100. Standardized the empty table.

--- a/public/assets/css/base/_b-datatables.less
+++ b/public/assets/css/base/_b-datatables.less
@@ -90,3 +90,12 @@ table.data-table {
 		}
 	}
 }
+
+.empty-table-body {
+	width: 100%;
+	text-align: center;
+	background: #fdfdfd;
+	color: #aaa;
+	padding: 20px 0;
+	border-bottom: solid 1px #e7e7e7;
+}
