--- a/public/components/GeckoTable/GeckoTableTemplate.htm
+++ b/public/components/GeckoTable/GeckoTableTemplate.htm
@@ -16,72 +16,70 @@
 				</a>
 			</div>
 		</div>
-		<thead>
-			<tr class="link--nohover">
-				<th>
-					<a href="#" ng-click="sortType = 'sex'; sortReverse = !sortReverse">
-					Sex
-					<span ng-show="sortType == 'sex' && !sortReverse" class="fa fa-caret-down"></span>
-					<span ng-show="sortType == 'sex' && sortReverse" class="fa fa-caret-up"></span>
+		<tr class="link--nohover">
+			<th>
+				<a href="#" ng-click="sortType = 'sex'; sortReverse = !sortReverse">
+				Sex
+				<span ng-show="sortType == 'sex' && !sortReverse" class="fa fa-caret-down"></span>
+				<span ng-show="sortType == 'sex' && sortReverse" class="fa fa-caret-up"></span>
+			</a>
+			</th>
+			<th>
+				<a href="#" ng-click="sortType = 'userId'; sortReverse = !sortReverse">
+					ID
+					<span ng-show="sortType == 'userId' && !sortReverse" class="fa fa-caret-down"></span>
+					<span ng-show="sortType == 'userId' && sortReverse" class="fa fa-caret-up"></span>
 				</a>
-				</th>
-				<th>
-					<a href="#" ng-click="sortType = 'userId'; sortReverse = !sortReverse">
-						ID
-						<span ng-show="sortType == 'userId' && !sortReverse" class="fa fa-caret-down"></span>
-						<span ng-show="sortType == 'userId' && sortReverse" class="fa fa-caret-up"></span>
-					</a>
-				</th>
-				<th>
-					<a href="#" ng-click="sortType = 'name'; sortReverse = !sortReverse">
-						Name
-						<span ng-show="sortType == 'name' && !sortReverse" class="fa fa-caret-down"></span>
-						<span ng-show="sortType == 'name' && sortReverse" class="fa fa-caret-up"></span>
-					</a>
-				</th>
-				<th>
-					<a href="#" ng-click="sortType = 'stage'; sortReverse = !sortReverse">
-						Stage <span ng-show="sortType == 'stage' && !sortReverse" class="fa fa-caret-down"></span>
-						<span ng-show="sortType == 'stage' && sortReverse" class="fa fa-caret-up"></span>                
-					</a>
-				</th>
-				<th>
-					<a href="#" ng-click="sortType = 'morph'; sortReverse = !sortReverse">
-						Morph <span ng-show="sortType == 'morph' && !sortReverse" class="fa fa-caret-down"></span>         
-						<span ng-show="sortType == 'morph' && sortReverse" class="fa fa-caret-up"></span>        
-					</a>
-				</th>
-				<th>
-					<a href="#" ng-click="sortType = 'hatchDate'; sortReverse = !sortReverse">
-						Age
-						<span ng-show="sortType == 'hatchDate' && !sortReverse" class="fa fa-caret-down"></span>  
-						<span ng-show="sortType == 'hatchDate' && sortReverse" class="fa fa-caret-up"></span>       
-					</a>
-				</th>
-				<th>
-					<a href="#" ng-click="sortType = 'location'; sortReverse = !sortReverse">
-						Location <span ng-show="sortType == 'location' && !sortReverse" class="fa fa-caret-down"></span>  
-						<span ng-show="sortType == 'location' && sortReverse" class="fa fa-caret-up"></span>       
-					</a>
-				</th>
-				<th> 
-					<a href="#" ng-click="sortType = 'status'; sortReverse = !sortReverse">
-						Status <span ng-show="sortType == 'status' && !sortReverse" class="fa fa-caret-down"></span>     
-						<span ng-show="sortType == 'status' && sortReverse" class="fa fa-caret-up"></span>  
-					</a>
-				</th>
-				<th class='align-right'>
-					<a href="#" ng-click="sortType = 'currWeight'; sortReverse = !sortReverse">
-						<span ng-show="sortType == 'currWeight' && sortReverse" class="fa fa-caret-up"></span>
-						<span ng-show="sortType == 'currWeight' && !sortReverse" class="fa fa-caret-down"></span>
-						Weight (g)  
-					</a>
-				</th>
-				<th></th>
-			</tr>
-		</thead>
+			</th>
+			<th>
+				<a href="#" ng-click="sortType = 'name'; sortReverse = !sortReverse">
+					Name
+					<span ng-show="sortType == 'name' && !sortReverse" class="fa fa-caret-down"></span>
+					<span ng-show="sortType == 'name' && sortReverse" class="fa fa-caret-up"></span>
+				</a>
+			</th>
+			<th>
+				<a href="#" ng-click="sortType = 'stage'; sortReverse = !sortReverse">
+					Stage <span ng-show="sortType == 'stage' && !sortReverse" class="fa fa-caret-down"></span>
+					<span ng-show="sortType == 'stage' && sortReverse" class="fa fa-caret-up"></span>                
+				</a>
+			</th>
+			<th>
+				<a href="#" ng-click="sortType = 'morph'; sortReverse = !sortReverse">
+					Morph <span ng-show="sortType == 'morph' && !sortReverse" class="fa fa-caret-down"></span>         
+					<span ng-show="sortType == 'morph' && sortReverse" class="fa fa-caret-up"></span>        
+				</a>
+			</th>
+			<th>
+				<a href="#" ng-click="sortType = 'hatchDate'; sortReverse = !sortReverse">
+					Age
+					<span ng-show="sortType == 'hatchDate' && !sortReverse" class="fa fa-caret-down"></span>  
+					<span ng-show="sortType == 'hatchDate' && sortReverse" class="fa fa-caret-up"></span>       
+				</a>
+			</th>
+			<th>
+				<a href="#" ng-click="sortType = 'location'; sortReverse = !sortReverse">
+					Location <span ng-show="sortType == 'location' && !sortReverse" class="fa fa-caret-down"></span>  
+					<span ng-show="sortType == 'location' && sortReverse" class="fa fa-caret-up"></span>       
+				</a>
+			</th>
+			<th> 
+				<a href="#" ng-click="sortType = 'status'; sortReverse = !sortReverse">
+					Status <span ng-show="sortType == 'status' && !sortReverse" class="fa fa-caret-down"></span>     
+					<span ng-show="sortType == 'status' && sortReverse" class="fa fa-caret-up"></span>  
+				</a>
+			</th>
+			<th class='align-right'>
+				<a href="#" ng-click="sortType = 'currWeight'; sortReverse = !sortReverse">
+					<span ng-show="sortType == 'currWeight' && sortReverse" class="fa fa-caret-up"></span>
+					<span ng-show="sortType == 'currWeight' && !sortReverse" class="fa fa-caret-down"></span>
+					Weight (g)  
+				</a>
+			</th>
+			<th></th>
+		</tr>
 		<!-- <a href="/geckos/{{gecko._id}}" class="link--card"> -->
-		<tr ng-repeat="gecko in filterGeckos() | orderBy:sortType:sortReverse | filter:searchTerm" class="gecko-card-table">
+		<tr ng-repeat="gecko in (filteredGeckos = (filterGeckos() | orderBy:sortType:sortReverse | filter:searchTerm))" class="gecko-card-table">
 
 			<td>
 				<i class='fa fa-mars male' ng-if="gecko.sex == 'male'"></i>
@@ -101,6 +99,7 @@
 			</td>
 		</tr>
     </table>
+	<div class='empty-table-body' ng-if='filteredGeckos.length == 0'>None currently</div>
 
 	<div class='page-padding align-right'>
 		<button class='button--flat' ng-click='showAddGeckoModal()'>Add Gecko</button>
